--- a/bpel_analyzer/pom.xml
+++ b/bpel_analyzer/pom.xml
@@ -32,11 +32,6 @@
     	<version>1.1.2</version>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>1.1.2</version>
-    </dependency>
-    <dependency>
 	  <groupId>commons-configuration</groupId>
 	  <artifactId>commons-configuration</artifactId>
 	  <version>1.10</version>
@@ -62,4 +57,18 @@
       <version>1.3.1</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <!-- or whatever version you use -->
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
