--- a/bpel_analyzer/pom.xml
+++ b/bpel_analyzer/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+	<groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
